Bug 72765 - Dynamic stack buffer overflow in GCC driver with -save-temps switch.
Summary: Dynamic stack buffer overflow in GCC driver with -save-temps switch.
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: driver (show other bugs)
Version: 7.0
: P3 normal
Target Milestone: ---
Assignee: Martin Liška
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-01 11:21 UTC by Maxim Ostapenko
Modified: 2016-08-15 11:24 UTC (History)
0 users

See Also:
Host: x86_64-pc-linux-gnu
Target: x86_64-pc-linux-gnu
Build: x86_64-pc-linux-gnu
Known to work:
Known to fail:
Last reconfirmed: 2016-08-09 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Ostapenko 2016-08-01 11:21:34 UTC
When testing experimental allocas and VLAs handling in AddressSanitizer, I've got such an error during GCC's "make check":

max@max:~/build/master$ /home/max/build/master/gcc/testsuite/g++/../../xg++ -B/home/max/build/master/gcc/testsuite/g++/../../ /home/max/workspace/downloads/gcc/gcc/testsuite/c-c++-common/cilk-plus/CK/pr69826-2.c -fno-diagnostics-show-caret -fdiagnostics-color=never -nostdinc++ -I/home/max/build/master/x86_64-unknown-linux-gnu/libstdc++-v3/include/x86_64-unknown-linux-gnu -I/home/max/build/master/x86_64-unknown-linux-gnu/libstdc++-v3/include -I/home/max/workspace/downloads/gcc/libstdc++-v3/libsupc++ -I/home/max/workspace/downloads/gcc/libstdc++-v3/include/backward -I/home/max/workspace/downloads/gcc/libstdc++-v3/testsuite/util -fmessage-length=0 -g -O2 -fcilkplus -save-temps -B/home/max/build/master/x86_64-unknown-linux-gnu/./libcilkrts/ -L/home/max/build/master/x86_64-unknown-linux-gnu/./libcilkrts/.libs -L/home/max/build/master/x86_64-unknown-linux-gnu/./libstdc++-v3/src/.libs -B/home/max/build/master/x86_64-unknown-linux-gnu/./libstdc++-v3/src/.libs -L/home/max/build/master/x86_64-unknown-linux-gnu/./libstdc++-v3/src/.libs -B/home/max/build/master/x86_64-unknown-linux-gnu/./libitm/ -L/home/max/build/master/x86_64-unknown-linux-gnu/./libitm/.libs -lm -o ./pr69826-2.exe 

=================================================================
==32062==ERROR: AddressSanitizer: dynamic-stack-buffer-overflow on address 0x7ffc9059d2cc at pc 0x00000044fc2c bp 0x7ffc9059d250 sp 0x7ffc9059ca00
READ of size 13 at 0x7ffc9059d2cc thread T0
    #0 0x44fc2b in __interceptor_memcpy /home/max/workspace/downloads/gcc/libsanitizer/asan/asan_interceptors.cc:436
    #1 0x4e1397 in save_string /home/max/workspace/downloads/gcc/gcc/gcc.c:8368
    #2 0x4f3027 in do_spec_1 /home/max/workspace/downloads/gcc/gcc/gcc.c:5423
    #3 0x4f60f4 in process_brace_body /home/max/workspace/downloads/gcc/gcc/gcc.c:6431
    #4 0x4f60f4 in handle_braces /home/max/workspace/downloads/gcc/gcc/gcc.c:6345
    #5 0x4f2eb7 in do_spec_1 /home/max/workspace/downloads/gcc/gcc/gcc.c:5802
    #6 0x4f60f4 in process_brace_body /home/max/workspace/downloads/gcc/gcc/gcc.c:6431
    #7 0x4f60f4 in handle_braces /home/max/workspace/downloads/gcc/gcc/gcc.c:6345
    #8 0x4f2eb7 in do_spec_1 /home/max/workspace/downloads/gcc/gcc/gcc.c:5802
    #9 0x4f1a91 in do_spec_1 /home/max/workspace/downloads/gcc/gcc/gcc.c:5917
    #10 0x4f60f4 in process_brace_body /home/max/workspace/downloads/gcc/gcc/gcc.c:6431
    #11 0x4f60f4 in handle_braces /home/max/workspace/downloads/gcc/gcc/gcc.c:6345
    #12 0x4f2eb7 in do_spec_1 /home/max/workspace/downloads/gcc/gcc/gcc.c:5802
    #13 0x4f60f4 in process_brace_body /home/max/workspace/downloads/gcc/gcc/gcc.c:6431
    #14 0x4f60f4 in handle_braces /home/max/workspace/downloads/gcc/gcc/gcc.c:6345
    #15 0x4f2eb7 in do_spec_1 /home/max/workspace/downloads/gcc/gcc/gcc.c:5802
    #16 0x4f60f4 in process_brace_body /home/max/workspace/downloads/gcc/gcc/gcc.c:6431
    #17 0x4f60f4 in handle_braces /home/max/workspace/downloads/gcc/gcc/gcc.c:6345
    #18 0x4f2eb7 in do_spec_1 /home/max/workspace/downloads/gcc/gcc/gcc.c:5802
    #19 0x4f60f4 in process_brace_body /home/max/workspace/downloads/gcc/gcc/gcc.c:6431
    #20 0x4f60f4 in handle_braces /home/max/workspace/downloads/gcc/gcc/gcc.c:6345
    #21 0x4f2eb7 in do_spec_1 /home/max/workspace/downloads/gcc/gcc/gcc.c:5802
    #22 0x4f474b in do_spec_2 /home/max/workspace/downloads/gcc/gcc/gcc.c:4841
    #23 0x4f719e in do_spec(char const*) /home/max/workspace/downloads/gcc/gcc/gcc.c:4808
    #24 0x4f74fe in driver::do_spec_on_infiles() const /home/max/workspace/downloads/gcc/gcc/gcc.c:8076
    #25 0x406e59 in driver::main(int, char**) /home/max/workspace/downloads/gcc/gcc/gcc.c:7216
    #26 0x407747 in main /home/max/workspace/downloads/gcc/gcc/gcc-main.c:46
    #27 0x7f1513415ec4 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21ec4)
    #28 0x408509  (/home/max/build/master/gcc/xg+++0x408509)

Address 0x7ffc9059d2cc is located in stack of thread T0
SUMMARY: AddressSanitizer: dynamic-stack-buffer-overflow /home/max/workspace/downloads/gcc/libsanitizer/asan/asan_interceptors.cc:436 in __interceptor_memcpy
Shadow bytes around the buggy address:
  0x1000120aba00: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x1000120aba10: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x1000120aba20: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x1000120aba30: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x1000120aba40: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
=>0x1000120aba50: 00 00 00 00 ca ca ca ca 00[04]cb cb cb cb cb cb
  0x1000120aba60: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x1000120aba70: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x1000120aba80: 00 00 00 00 00 00 00 00 00 00 00 00 f1 f1 f1 f1
  0x1000120aba90: 00 00 00 00 f2 f2 f2 f2 00 00 00 00 00 00 00 00
  0x1000120abaa0: 00 00 00 00 00 00 00 00 00 00 f4 f4 f3 f3 f3 f3
Shadow byte legend (one shadow byte represents 8 application bytes):
  Addressable:           00
  Partially addressable: 01 02 03 04 05 06 07 
  Heap left redzone:       fa
  Heap right redzone:      fb
  Freed heap region:       fd
  Stack left redzone:      f1
  Stack mid redzone:       f2
  Stack right redzone:     f3
  Stack partial redzone:   f4
  Stack after return:      f5
  Stack use after scope:   f8
  Global redzone:          f9
  Global init order:       f6
  Poisoned by user:        f7
  Container overflow:      fc
  Array cookie:            ac
  Intra object redzone:    bb
  ASan internal:           fe
  Left alloca redzone:     ca
  Right alloca redzone:    cb
==32062==ABORTING


Looking to corresponding code:

static char *
save_string (const char *s, int len)
{
  char *result = XNEWVEC (char, len + 1);
  memcpy (result, s, len);
  result[len] = 0;
  return result;
}

Here:
s == "pr69826-2.s"
strlen (s) == 11
len == 13

Thus, we have an overflow on s im memcpy (we have only 12 valid bytes). Not sure this is a serious problem, but sounds like a small bug.
Comment 1 Martin Liška 2016-08-09 11:02:46 UTC
Confirmed, I've got a patch which I'll send to ML soon.
Comment 2 Martin Liška 2016-08-15 11:17:22 UTC
Author: marxin
Date: Mon Aug 15 11:16:50 2016
New Revision: 239475

URL: https://gcc.gnu.org/viewcvs?rev=239475&root=gcc&view=rev
Log:
Fix invalid memory access in gcc.c (driver/72765)

	PR driver/72765
	* gcc.c (do_spec_1): Call save_string with the right size.
	(save_string): Do an assert about string we copy.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/gcc.c
Comment 3 Martin Liška 2016-08-15 11:20:06 UTC
Author: marxin
Date: Mon Aug 15 11:19:34 2016
New Revision: 239476

URL: https://gcc.gnu.org/viewcvs?rev=239476&root=gcc&view=rev
Log:
Fix invalid memory access in gcc.c (driver/72765)

	Backported from mainline
	2016-08-15  Martin Liska  <mliska@suse.cz>

	PR driver/72765
	* gcc.c (do_spec_1): Call save_string with the right size.
	(save_string): Do an assert about string we copy.

Modified:
    branches/gcc-6-branch/gcc/ChangeLog
    branches/gcc-6-branch/gcc/gcc.c
Comment 4 Martin Liška 2016-08-15 11:20:41 UTC
Author: marxin
Date: Mon Aug 15 11:20:09 2016
New Revision: 239477

URL: https://gcc.gnu.org/viewcvs?rev=239477&root=gcc&view=rev
Log:
Fix invalid memory access in gcc.c (driver/72765)

	Backported from mainline
	2016-08-15  Martin Liska  <mliska@suse.cz>

	PR driver/72765
	* gcc.c (do_spec_1): Call save_string with the right size.
	(save_string): Do an assert about string we copy.

Modified:
    branches/gcc-5-branch/gcc/ChangeLog
    branches/gcc-5-branch/gcc/gcc.c
Comment 5 Martin Liška 2016-08-15 11:24:59 UTC
Fixed on trunk and all active branches.